Patch and Delete task by ID generated with make gen cmd, to api.gen.go file
